[package]
name = "prdt-media-ffmpeg"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# `error.rs` (FfmpegError + From<FfmpegError> for prdt_media_core::EncodeError)
# is compiled on every target so the host crate can keep an `Option<FfmpegError>`
# field cross-platform even when the encoder itself is Linux-only. So
# prdt-media-core + thiserror must be unconditional. Linux-only modules
# (hevc_vaapi_encoder / core_adapter / hwdevice / hwframes / options) keep
# their cfg-gated deps below.
[dependencies]
prdt-media-core = { path = "../media-core" }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-sw = { path = "../media-sw" }
prdt-protocol = { path = "../protocol" }
tracing = { workspace = true }
# 0.16.5 carries pre-generated bindings for FFmpeg 5/6/7/7.1/8. Pick the right
# one via the per-ABI feature below — the FFmpeg major must match what's
# installed on the build/runtime host (bookworm = ffmpeg5; Ubuntu 24.04 =
# ffmpeg6 but ffmpeg5 bindings happen to be ABI-stable here; Arch = ffmpeg7).
rusty_ffmpeg = { version = "=0.16.7", optional = true, default-features = false }

[features]
default = []

# Pick exactly one FFmpeg ABI feature per build. They are mutually exclusive
# (rusty_ffmpeg's build script rejects multiple) — Cargo merges features
# across the dep graph so don't enable two simultaneously.
ffmpeg = ["dep:rusty_ffmpeg"]

# Backend × ABI combinations. The unsuffixed `ffmpeg-encode-hevc-vaapi`
# defaults to ffmpeg5 for backward compat (bookworm dev container, current
# CI matrix). Arch / FFmpeg 7 hosts use the `-ffmpeg7` variant.
ffmpeg-encode-hevc-vaapi = ["ffmpeg", "rusty_ffmpeg/ffmpeg5"]
ffmpeg-encode-hevc-vaapi-ffmpeg6 = ["ffmpeg", "rusty_ffmpeg/ffmpeg6"]
ffmpeg-encode-hevc-vaapi-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7"]

# NVENC backend × ABI combinations. The unsuffixed `ffmpeg-encode-hevc-nvenc`
# defaults to ffmpeg6 (Ubuntu 24.04 smoke runner) — this deliberately diverges
# from VAAPI's ffmpeg5 default to minimize "works locally, breaks in smoke"
# surprises. The divergence is temporary and tracked as ADR follow-up F6 (flip
# VAAPI's default to ffmpeg6 in a separate cleanup PR). NVENC and VAAPI may
# compile together provided they agree on the ABI variant (matrix is `vaapi ×
# abi` and `nvenc × abi`, not `vaapi-ffmpeg5 + nvenc-ffmpeg7`).
ffmpeg-encode-hevc-nvenc = ["ffmpeg", "rusty_ffmpeg/ffmpeg6"]
ffmpeg-encode-hevc-nvenc-ffmpeg5 = ["ffmpeg", "rusty_ffmpeg/ffmpeg5"]
ffmpeg-encode-hevc-nvenc-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7"]
