[package]
name = "prdt-media-ffmpeg"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# `error.rs` (FfmpegError + From<FfmpegError> for prdt_media_core::EncodeError)
# is compiled on every target so the host crate can keep an `Option<FfmpegError>`
# field cross-platform even when the encoder itself is Linux-only. So
# prdt-media-core + thiserror must be unconditional. Linux-only modules
# (hevc_vaapi_encoder / core_adapter / hwdevice / hwframes / options) keep
# their cfg-gated deps below.
[dependencies]
prdt-media-core = { path = "../media-core" }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-sw = { path = "../media-sw" }
prdt-protocol = { path = "../protocol" }
tracing = { workspace = true }
# 0.16.5 carries pre-generated bindings for FFmpeg 5/6/7/7.1/8. Pick the right
# one via the per-ABI feature below — the FFmpeg major must match what's
# installed on the build/runtime host (bookworm = ffmpeg5; Ubuntu 24.04 =
# ffmpeg6 but ffmpeg5 bindings happen to be ABI-stable here; Arch = ffmpeg7).
rusty_ffmpeg = { version = "=0.16.7", optional = true, default-features = false }

[features]
default = []

# rusty_ffmpeg's ABI features (ffmpeg5/ffmpeg6/ffmpeg7) form an additive
# cascade in its Cargo.toml (ffmpeg6 = ["ffmpeg5"], ffmpeg7 = ["ffmpeg6"]).
# Cargo unifies features additively across the dep graph; enabling any
# variant force-enables all lower ones, and bindings target the highest
# enabled ABI. Pick one ABI per build to keep your intent unambiguous,
# but the final binary always contains exactly one set of bindings.
ffmpeg = ["dep:rusty_ffmpeg"]

# Backend × ABI combinations. The unsuffixed `ffmpeg-encode-hevc-vaapi`
# defaults to ffmpeg5 for backward compat (bookworm dev container, current
# CI matrix). Arch / FFmpeg 7 hosts use the `-ffmpeg7` variant.
ffmpeg-encode-hevc-vaapi = ["ffmpeg", "rusty_ffmpeg/ffmpeg5", "ffmpeg-encode-hevc-vaapi-any"]
ffmpeg-encode-hevc-vaapi-ffmpeg6 = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-encode-hevc-vaapi-any"]
ffmpeg-encode-hevc-vaapi-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7", "ffmpeg-encode-hevc-vaapi-any"]
# Marker enabled by all three VAAPI ABI variants; use in cfg() so any ABI
# activates VAAPI code paths.
ffmpeg-encode-hevc-vaapi-any = []

# NVENC backend × ABI combinations. The unsuffixed `ffmpeg-encode-hevc-nvenc`
# defaults to ffmpeg6 (Ubuntu 24.04 smoke runner) — this deliberately diverges
# from VAAPI's ffmpeg5 default to minimize "works locally, breaks in smoke"
# surprises. The divergence is temporary and tracked as ADR follow-up F6 (flip
# VAAPI's default to ffmpeg6 in a separate cleanup PR). NVENC and VAAPI may
# compile together provided they agree on the ABI variant (matrix is `vaapi ×
# abi` and `nvenc × abi`, not `vaapi-ffmpeg5 + nvenc-ffmpeg7`).
ffmpeg-encode-hevc-nvenc = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-encode-hevc-nvenc-any"]
ffmpeg-encode-hevc-nvenc-ffmpeg5 = ["ffmpeg", "rusty_ffmpeg/ffmpeg5", "ffmpeg-encode-hevc-nvenc-any"]
ffmpeg-encode-hevc-nvenc-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7", "ffmpeg-encode-hevc-nvenc-any"]
# Marker enabled by all three NVENC ABI variants; use in cfg() so any ABI
# activates NVENC code paths.
ffmpeg-encode-hevc-nvenc-any = []

# Main10 VAAPI backend × ABI combinations (P3). Each variant transitively enables
# the matching 8-bit VAAPI feature so all VAAPI scaffolding is available. The
# unsuffixed `ffmpeg-encode-hevc-vaapi-main10` defaults to ffmpeg5 (dev container).
ffmpeg-encode-hevc-vaapi-main10 = ["ffmpeg-encode-hevc-vaapi", "ffmpeg-encode-hevc-vaapi-main10-any"]
ffmpeg-encode-hevc-vaapi-main10-ffmpeg5 = ["ffmpeg-encode-hevc-vaapi", "rusty_ffmpeg/ffmpeg5", "ffmpeg-encode-hevc-vaapi-main10-any"]
ffmpeg-encode-hevc-vaapi-main10-ffmpeg6 = ["ffmpeg-encode-hevc-vaapi-ffmpeg6", "ffmpeg-encode-hevc-vaapi-main10-any"]
ffmpeg-encode-hevc-vaapi-main10-ffmpeg7 = ["ffmpeg-encode-hevc-vaapi-ffmpeg7", "ffmpeg-encode-hevc-vaapi-main10-any"]
# Marker enabled by all four VAAPI Main10 ABI variants; use in cfg() so any ABI
# activates VAAPI Main10 code paths.
ffmpeg-encode-hevc-vaapi-main10-any = []

# Main10 NVENC backend × ABI combinations (P3). Each variant transitively enables
# the matching 8-bit NVENC feature. The unsuffixed variant defaults to ffmpeg6
# (Ubuntu 24.04 smoke runner; mirrors the 8-bit NVENC default).
ffmpeg-encode-hevc-nvenc-main10 = ["ffmpeg-encode-hevc-nvenc", "ffmpeg-encode-hevc-nvenc-main10-any"]
ffmpeg-encode-hevc-nvenc-main10-ffmpeg5 = ["ffmpeg-encode-hevc-nvenc-ffmpeg5", "ffmpeg-encode-hevc-nvenc-main10-any"]
ffmpeg-encode-hevc-nvenc-main10-ffmpeg6 = ["ffmpeg-encode-hevc-nvenc", "ffmpeg-encode-hevc-nvenc-main10-any"]
ffmpeg-encode-hevc-nvenc-main10-ffmpeg7 = ["ffmpeg-encode-hevc-nvenc-ffmpeg7", "ffmpeg-encode-hevc-nvenc-main10-any"]
# Marker enabled by all four NVENC Main10 ABI variants; use in cfg() so any ABI
# activates NVENC Main10 code paths.
ffmpeg-encode-hevc-nvenc-main10-any = []

# NPP variants (P2.5). Each NPP-ffmpegN feature transitively enables the matching
# NVENC-ffmpegN feature so downstream crates can opt into a single feature and
# get the consistent NVENC + NPP pair. ABI consistency is guaranteed by Cargo's
# additive feature unification over rusty_ffmpeg's ABI cascade
# (`ffmpeg6 = ["ffmpeg5"]`, `ffmpeg7 = ["ffmpeg6"]`) — enabling any variant
# force-enables all lower ones, and bindings target the highest enabled ABI.
ffmpeg-encode-hevc-nvenc-npp = ["ffmpeg-encode-hevc-nvenc", "ffmpeg-encode-hevc-nvenc-npp-any"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg5 = ["ffmpeg-encode-hevc-nvenc-ffmpeg5", "ffmpeg-encode-hevc-nvenc-npp-any"]
ffmpeg-encode-hevc-nvenc-npp-ffmpeg7 = ["ffmpeg-encode-hevc-nvenc-ffmpeg7", "ffmpeg-encode-hevc-nvenc-npp-any"]
# Marker enabled by all three NPP ABI variants; gates cuda_npp /
# hevc_nvenc_npp_encoder modules.
ffmpeg-encode-hevc-nvenc-npp-any = []

# P2 — HEVC decode side. Three backends (sw / vaapi / nvdec) × four ABIs
# (default unsuffixed = ffmpeg6 to match the Ubuntu 24.04 smoke runner, plus
# explicit -ffmpeg5 for the Debian bookworm dev container, -ffmpeg6, and
# -ffmpeg7). The `-any` marker per backend is what cfg() gates check so
# the modules compile under any ABI variant.
ffmpeg-decode-hevc-sw = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg5 = ["ffmpeg", "rusty_ffmpeg/ffmpeg5", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg6 = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-any = []
ffmpeg-decode-hevc-vaapi = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg5 = ["ffmpeg", "rusty_ffmpeg/ffmpeg5", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg6 = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-any = []
ffmpeg-decode-hevc-nvdec = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg5 = ["ffmpeg", "rusty_ffmpeg/ffmpeg5", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg6 = ["ffmpeg", "rusty_ffmpeg/ffmpeg6", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg7 = ["ffmpeg", "rusty_ffmpeg/ffmpeg7", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-any = []
