[package]
name = "prdt-media-linux"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prdt-media-core = { path = "../media-core" }
prdt-media-sw = { path = "../media-sw" }
prdt-media-policy = { path = "../media-policy" }
prdt-protocol = { path = "../protocol" }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-vaapi = { path = "../media-vaapi" }
x11rb = { workspace = true, features = ["shm"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
async-trait = "0.1"
anyhow = "1"
libc = "0.2"
serde = { workspace = true }
toml = { workspace = true }
zbus = { version = "4", default-features = false, features = ["tokio"] }
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
dirs = { workspace = true }
# pipewire 0.9 — requires libpipewire-0.3 >= 0.3.55 system lib (Debian
# bookworm ships 0.3.65, Ubuntu 24.04+ ships 1.0+). Older systems
# (Ubuntu 22.04 jammy = 0.3.48) cannot build this; see scripts/dev-container.sh
# for the Debian bookworm Docker image used to build this branch.
pipewire = "0.9"

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time", "rt", "macros"] }
