[package]
name = "prdt-media-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prdt-protocol     = { path = "../protocol" }
prdt-media-core   = { path = "../media-core" }
async-trait       = "0.1"
tokio             = { workspace = true, features = ["sync", "time", "rt"] }
tracing           = "0.1"
serde             = { version = "1", features = ["derive"] }
toml              = "0.8"
dirs              = "5"
thiserror         = "1"

[dev-dependencies]
tokio             = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
proptest          = "1"
serde_json        = "1"
