[package]
name = "prdt-media-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prdt-protocol     = { path = "../protocol" }
prdt-media-core   = { path = "../media-core" }
async-trait       = "0.1"
tokio             = { workspace = true, features = ["sync", "time", "rt"] }
tracing           = { workspace = true }
serde             = { workspace = true }
toml              = { workspace = true }
dirs              = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
tokio             = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
proptest          = { workspace = true }
serde_json        = { workspace = true }
bytes             = { workspace = true }
