[package]
name = "prdt-media-win"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
prdt-media-core = { path = "../media-core" }
prdt-media-sw = { path = "../media-sw", optional = true }
prdt-protocol = { path = "../protocol" }
async-trait = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["time"] }
libloading = "0.8"
# arc-swap: lock-free Arc-as-atomic-cell. Used to publish the latest decoded
# DualPlaneFrame from the cuvid display callback to the viewer thread without
# acquiring a Mutex on the hot path. Not in workspace deps because no other
# crate currently consumes it.
arc-swap = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_Media",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
] }

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.69"

[target.'cfg(windows)'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []
# Enables the legacy CPU NV12 readback path on the NVDEC decoder. Used by
# regression tests that compare CPU and GPU output pixel-by-pixel; off by
# default in production where it would slow the decode loop by 2 PCIe copies.
cpu-nv12 = []
# Enables the CPU→GPU NV12 upload path used by the openh264 SW decoder.
# Builds `CpuI420Uploader` and pulls in `prdt-media-sw` for the I420→NV12
# conversion helper. Distinct from `cpu-nv12` (which is a *readback* path
# used only by NVDEC regression tests).
i420-upload = ["dep:prdt-media-sw"]
