[package]
name = "prdt-signaling-server"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "prdt-signaling-server"
path = "src/main.rs"

[lib]
name = "prdt_signaling_server"
path = "src/lib.rs"

[dependencies]
prdt-signaling-proto = { path = "../signaling-proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "io-util", "sync", "time"] }
