[package]
name = "prdt-transport"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prdt-protocol = { path = "../protocol" }
prdt-crypto = { path = "../crypto" }
prdt-nat-traversal = { path = "../nat-traversal" }
tokio.workspace = true
bincode.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
reed-solomon-erasure.workspace = true
async-trait = "0.1"
rand_core = { version = "0.6", features = ["getrandom"] }
socket2 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "sync", "time", "test-util"] }
proptest.workspace = true
