[package]
name = "prdt-viewer-overlay"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prdt-gui-common = { path = "../gui-common" }
prdt-protocol = { path = "../protocol" }
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
