[package]
name = "prdt-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "prdt-viewer"
path = "src/main.rs"

[dependencies]
prdt-audio = { path = "../audio" }
prdt-crypto = { path = "../crypto" }
prdt-filetransfer = { path = "../filetransfer" }
prdt-nat-traversal = { path = "../nat-traversal" }
prdt-protocol = { path = "../protocol" }
prdt-transport = { path = "../transport" }
prdt-signaling-client = { path = "../signaling-client" }
prdt-signaling-proto = { path = "../signaling-proto" }
url = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "sync", "time", "signal", "fs", "io-util"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
winit = "0.30"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
prdt-media-win = { path = "../media-win" }
prdt-input-win = { path = "../input-win" }
prdt-gui-viewer = { path = "../gui-viewer" }
prdt-gui-common = { path = "../gui-common" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
