[package]
name = "prdt-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PR5a: this crate is now lib-only. The legacy prdt-viewer.exe shim was
# removed; users invoke `prdt connect [...]` via the prdt-client bin,
# which calls into prdt_viewer::run_with_args directly.

[dependencies]
prdt-audio = { path = "../audio" }
prdt-crypto = { path = "../crypto" }
prdt-filetransfer = { path = "../filetransfer" }
prdt-nat-traversal = { path = "../nat-traversal" }
prdt-protocol = { path = "../protocol" }
prdt-transport = { path = "../transport" }
prdt-signaling-client = { path = "../signaling-client" }
prdt-signaling-proto = { path = "../signaling-proto" }
url = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "sync", "time", "signal", "fs", "io-util"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
async-trait = "0.1"
thiserror = { workspace = true }
winit = "0.30"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
prdt-media-win = { path = "../media-win", features = ["i420-upload"] }
prdt-media-sw = { path = "../media-sw" }
prdt-input-win = { path = "../input-win" }
prdt-gui-viewer = { path = "../gui-viewer" }
prdt-gui-common = { path = "../gui-common" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-linux = { path = "../media-linux", default-features = false }
prdt-input-linux = { path = "../input-linux" }
prdt-media-sw = { path = "../media-sw" }
softbuffer = "0.4"
bytemuck = "1"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
